--- a/php7.2/php.ini
+++ b/php7.2/php.ini
@@ -3,4 +3,5 @@ date.timezone = "Asia/Tokyo"
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
+memory_limit = 2048M
 
