--- a/php7.2/php.ini
+++ b/php7.2/php.ini
@@ -4,4 +4,5 @@ date.timezone = "Asia/Tokyo"
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
 memory_limit = 2048M
-
+post_max_size = 256M
+upload_max_filesize 256M
