梵語の処理を修正

--- a/php7.2/php.ini
+++ b/php7.2/php.ini
@@ -1,8 +1,10 @@
 [Date]
-date.timezone = "Asia/Tokyo"
+date.timezone = "Asia/Tokyo";
 [mbstring]
-mbstring.internal_encoding = "UTF-8"
-mbstring.language = "Japanese"
-memory_limit = 2048M
-post_max_size = 256M
-upload_max_filesize 256M
+max_execution_time = 600;
+max_input_time = 600;
+mbstring.internal_encoding = "UTF-8";
+mbstring.language = "Japanese";
+memory_limit = 2048M;
+post_max_size = 256M;
+upload_max_filesize 256M;
