データベース・環境設定を修正

--- a/php7.2/php.ini
+++ b/php7.2/php.ini
@@ -1,10 +1,10 @@
 [Date]
 date.timezone = "Asia/Tokyo";
 [mbstring]
-max_execution_time = 600;
-max_input_time = 600;
+max_execution_time = 3000;
+max_input_time = 3000;
 mbstring.internal_encoding = "UTF-8";
 mbstring.language = "Japanese";
 memory_limit = 2048M;
 post_max_size = 256M;
-upload_max_filesize 256M;
+upload_max_filesize = 256M;
